total profit loss api
